<?xml version="1.0"?>
<package format="3">
  <name>tuda_deployment_scripts</name>
  <version>1.0.0</version>
  <description>Scripts related to the deployment of ROS packages on external platforms, e.g., robots.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <maintainer email="schmidt@sim.tu-darmstadt.de">Aljoscha Schmidt</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/thor_scripts</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>
  <author email="schnaubelt@sim.tu-darmstadt.de">Marius Schnaubelt</author>
  <author email="scholz@sim.tu-darmstadt.de">Dorian Scholz</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be ament packages or system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>workspace_scripts</depend>

  <!-- Export section is used to specify additional information -->
  <export>
    <!-- Add any additional export tags here -->
  </export>
</package>